fix contrast errors

--- a/15/css/styles.css
+++ b/15/css/styles.css
@@ -357,7 +357,7 @@ header h2 {
   font-weight: 300;
   letter-spacing: 0.75rem;
   font-size: 1rem;
-  color: #a8a8b2;
+  color: #737381;
 }
 
 /* NAVIGATION STYLING */
@@ -399,7 +399,7 @@ nav ul li a {
   display: block;
   padding: 0.85rem 2vw;
   text-decoration: none;
-  color: #8d8d9a;
+  color: #737381;
   display: flex;
   flex-direction: row;
   align-items: center;
@@ -501,7 +501,7 @@ main div#about section#about-cards article h2 {
   margin: 1.25rem 0 0.5rem 0;
 }
 main div#about section#about-cards article p {
-  color: #a8a8b2;
+  color: #737381;
 }
 
 main div#articleWrapper {
@@ -526,6 +526,9 @@ main div#articleWrapper div#bottom-articles article h2 {
   color: #0480b1;
   margin: 1.25rem 0 0.5rem 0;
   font-weight: 500;
+}
+main div#articleWrapper div#bottom-articles article p {
+  color: #737381;
 }
 main div#articleWrapper div#bottom-articles article#pricing div#pricing-description {
   position: absolute;
